[package]
name = "valr_rusty_bot"
version = "0.1.0"
edition = "2021"

[[strategies]]

[dependencies]
dotenv = "0.15.0"
log = "*"
env_logger = "0.11.3"
reqwest = { version = "0.12.4", features = ["blocking","json"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
hmac = "0.13.0-pre.3"
serde_urlencoded = "0.7.1"
sha2 = "0.11.0-pre.3"
base64 = "0.22.1"
ring = "0.17.8"
sha256 = "1.5.0"
urlencoding = "2.1.3"
hex = "0.4.3"
serde_json = "1.0.117"
envy = "0.4.2"
warp = "0.3.7"
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
tungstenite =  { version = "0.23.0"}
url = "2.5.0"
hyper = "1.3.1"
http = "1.1.0"
httparse = "1.8.0"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
chrono = "0.4.38"
futures = "0.3.30"
lazy_static = "1.4.0"
serde_with = "3.8.1"
colored = "2.1.0"